[project]
name = "tune-lease-55"
version = "0.1.0"
description = "リース審査AI（Streamlit + FastAPI + Next.js + Flask mobile_app）"
requires-python = ">=3.10,<3.13"

dependencies = [
    # ── Streamlit メインアプリ ──
    "streamlit==1.54.0",
    "pandas==2.3.0",
    "numpy==1.26.4",
    "plotly==6.3.0",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "scikit-learn==1.2.2",
    "umap-learn==0.5.7",
    # ── umap → pynndescent → llvmlite の macOS Intel wheel 制約 ──
    "llvmlite<0.44",
    "numba<0.60",
    "lightgbm==4.6.0",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "tenacity==9.1.2",
    "ollama==0.6.1",
    "pgmpy==1.0.0",
    "slack-bolt==1.22.0",
    "slack-sdk==3.35.0",
    "timesfm",
    # ── FastAPI ──
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "slowapi==0.1.9",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
    "filelock>=3.0.0",
    # ── torch: Intel Mac (x86_64) は 2.2.2 までしか wheel が無い ──
    "torch<2.3.0",
    # ── Flask mobile_app / web ──
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "joblib>=1.3.0",
    "waitress>=3.0.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.2.0,<3.0",
    "onnxruntime<=1.18.0",
    "apscheduler>=3.10,<4.0",
    "google-cloud-secret-manager>=2.0",
    "google-cloud-storage>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "pyflakes>=3.2.0",
]

[tool.uv]
# anaconda 環境を避け、uv 管理の venv を使う
managed = true
package = false
